Startup + user data flow, basic EVT parsing, and main window skeleton.

--- a/src/EVTUI/App.axaml
+++ b/src/EVTUI/App.axaml
@@ -11,5 +11,7 @@
   
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
+        <StyleInclude Source="Icons.axaml"/>
     </Application.Styles>
 </Application>
