--- a/src/EVTUI/UI/EditorWindow/EditorWindow.axaml
+++ b/src/EVTUI/UI/EditorWindow/EditorWindow.axaml
@@ -28,7 +28,8 @@
     <TabItem Header="Previews">
       <TabControl Margin="5">
         <TabItem Header="Audio">
-          <TextBlock Text="This is the Audio Preview tab." />
+          <!--TextBlock Text="This is the Audio Preview tab." /-->
+          <views:AudioPanel DataContext="{Binding audioPanelVM}" Padding="10"/>
         </TabItem>
         <TabItem Header="Images">
           <TextBlock Text="This is the Image Preview tab." />
