--- a/src/EVTUI/UI/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/EVTUI/UI/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -37,9 +37,9 @@
       <Setter Property="FontSize" Value="20"/>
       <Setter Property="FontWeight" Value="Light"/>
     </Style>
-    <Style Selector="Expander StackPanel">
+    <!--Style Selector="Expander StackPanel">
       <Setter Property="Spacing" Value="10"/>
-    </Style>
+    </Style-->
     <Style Selector="Button.preview">
       <Setter Property="Height" Value="32"/>
       <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -266,18 +266,18 @@
     <!-- COMMAND TYPES -->
 
     <DataTemplate DataType="{x:Type cmds:Basics}">
-      <StackPanel Spacing="10">
-      <Expander Header="Conditions" IsExpanded="{Binding HasCondition}">
-        <StackPanel Classes="form">
-          <ContentControl Content="{Binding ConditionalType}"/>
-          <StackPanel Orientation="Vertical" IsVisible="{Binding HasCondition}">
-            <ContentControl Content="{Binding ConditionalIndex}"/>
-            <ContentControl Content="{Binding ComparisonType}"/>
-            <ContentControl Content="{Binding ConditionalValue}"/>
+      <StackPanel Classes="form">
+        <Expander Header="Conditions" IsExpanded="{Binding HasCondition}">
+          <StackPanel Classes="form">
+            <ContentControl Content="{Binding ConditionalType}"/>
+            <StackPanel Classes="form" IsVisible="{Binding HasCondition}">
+              <ContentControl Content="{Binding ConditionalIndex}"/>
+              <ContentControl Content="{Binding ComparisonType}"/>
+              <ContentControl Content="{Binding ConditionalValue}"/>
+            </StackPanel>
           </StackPanel>
-        </StackPanel>
-      </Expander>
-      <Separator Classes="formsubtitle"/>
+        </Expander>
+        <Separator Classes="formsubtitle"/>
       </StackPanel>
     </DataTemplate>
 
@@ -635,7 +635,7 @@
           </Button>
         </StackPanel>
         <Expander Header="Position">
-          <StackPanel>
+          <StackPanel Classes="form">
             <ContentControl Content="{Binding X}"/>
             <ContentControl Content="{Binding Y}"/>
             <ContentControl Content="{Binding Z}"/>
