--- a/src/EVTUI/UI/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/EVTUI/UI/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -41,8 +41,9 @@
       <Setter Property="Spacing" Value="10"/>
     </Style-->
     <Style Selector="StackPanel.preview">
-      <Setter Property="Orientation" Value="Horizontal"/>
       <Setter Property="HorizontalAlignment" Value="Right"/>
+      <Setter Property="Orientation" Value="Horizontal"/>
+      <Setter Property="Spacing" Value="5"/>
     </Style>
     <!--Style Selector="StackPanel.preview > Button">
       <Setter Property="Margin" Value="10"/>
@@ -701,7 +702,7 @@
             <ItemsControl.ItemTemplate>
               <DataTemplate>
                 <StackPanel Classes="preview">
-                  <ContentControl Content="{Binding Dialogue}"/>
+                  <ContentControl Content="{Binding Dialogue}" Margin="0,5,0,5"/>
                   <Button Click="PlayVoiceTrack" ToolTip.Tip="Play/Pause Selected Track" IsVisible="{Binding HasVoiceLine}">
                     <PathIcon Data="{StaticResource video_play_pause_regular}" />
                   </Button>
@@ -719,7 +720,7 @@
           <ItemsControl ItemsSource="{Binding Options}">
             <ItemsControl.ItemTemplate>
               <DataTemplate>
-                <ContentControl Content="{Binding Dialogue}"/>
+                <ContentControl Content="{Binding Dialogue}" Margin="0,5,0,5"/>
               </DataTemplate>
             </ItemsControl.ItemTemplate>
           </ItemsControl>
