Fix for display of Snd_ command previews in Play vs. Stop uses.

--- a/src/EVTUI/UI/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/EVTUI/UI/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -774,8 +774,9 @@
         <ContentControl Content="{Binding Basics}"/>
         <ContentControl Content="{Binding Action}"/>
         <ContentControl Content="{Binding Source}"/>
-        <ContentControl Content="{Binding Channel}"/>
-        <StackPanel Classes="preview">
+        <ContentControl Content="{Binding Channel}" IsVisible="{Binding IsPlayCmd}"/>
+        <ContentControl Content="{Binding FadeDuration}" IsVisible="{Binding IsPlayCmd}"/>
+        <StackPanel Classes="preview" IsVisible="{Binding IsPlayCmd}">
           <ContentControl Content="{Binding CueID}"/>
           <Button Click="PlaySFXTrack" ToolTip.Tip="Play/Pause Selected Track">
             <PathIcon Data="{StaticResource video_play_pause_regular}" />
